# fastapi-modern-template

./: .gitignore  README.md  env.example  pyproject.toml  test_swagger.html
src/: database_config.py  main.py  settings.py  tasks.py
src/apps/health/: routes.py
src/apps/users/: admin.py  dependencies.py  models.py  routes.py
src/core/: dependencies.py  discover.py  logs.py  loguru.py  router.py
src/core/database/: __init__.py  mixins.py  utils.py
src/core/middlewares/: __init__.py  auth_error.py  cors.py  http_error.py
src/core/s3/: __init__.py  exceptions.py  factory.py  minio.py  utils.py
src/core/security/: __init__.py  exceptions.py  factory.py  jwt.py  password.py
src/core/swagger/: __init__.py  swagger-ui.html
src/migrations/models/: 0_20250826140755_init.py
